# RISCV-Simulator

./: CMakeLists.txt  README.md  main.cpp  trace_parse.py
ram/: create_ram.py  elfParser.cpp  ram.txt
src/: defines.hpp  elfParser.cpp  instruction.cpp  instruction.hpp
src/Decoder/: Decoder.cpp  Decoder.hpp  Test.cpp
src/Hart/: hart.cpp  hart.hpp
src/Machine/: machine.cpp  machine.hpp  register.hpp
